# lockerAPI

./: .gitignore  Dockerfile  README.md  compose.yaml  dev.Dockerfile  lockerAPI.http  pyproject.toml
app/: config.py  db.py  main.py
app/controller/: rooms.py
app/models/: models.py
app/repository/: RoomRepo.py  generics.py
app/service/: RoomService.py
migrations/versions/: 2024_09_09_1547-b30a398b24e0_create_cities_table.py
