[project]
name = "lockerapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.13.2",
    "fastapi[standard]>=0.114.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "sqlalchemy>=2.0.34",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.4",
]
